--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Smartphone Compatible web template" />
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">C++</span>
+                  <span class="skill">C/C++</span>
                 </div>
               </div>
             </div>
@@ -430,7 +430,7 @@ Smartphone Compatible web template" />
               </div>
               <div class="timeline-body">
 				<h5 class="timeline-title">Internship ( February 2019 - May 2019 )</h5>
-				<h5 class="timeline-title">Junior Web Developer ( June 2019 - September 2019 )</h5>
+				<h5 class="timeline-title">Junior Web Developer ( June 2019 - October 2019 )</h5>
                 <p>I worked here as a full-stack web developer.</p>
 				<p>- Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello</p>
                 <p><strong>Great! place to learn.</strong></p>
