--- a/index.html
+++ b/index.html
@@ -117,12 +117,6 @@ Smartphone Compatible web template" />
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>ADDRESS </b></li>
-                  <li>Kluang, Johor.</li>
-                </ul>
-              </li>
-              <li>
-                <ul class="address-text">
                   <li><b>E-MAIL </b></li>
                   <li><a href="mailto:vhisyhnu97@gmail.com"> vhisyhnu97@gmail.com</a></li>
                 </ul>
@@ -147,7 +141,7 @@ Smartphone Compatible web template" />
           <div class="about-left-grid">
             <h2><span>Software Engineer</span></h2>
               <p>Hi there! I'm Vhisyhnu and I love working with people to do things bigger than I could accomplish alone. I'm motivated by big problems. 
-			  A quick learner in a working environment while able to meet targets and datelines with good precision or organizing data and information entry .
+			  A quick learner in a working environment while able to meet targets and deadlines with good precision or organizing data and information entry .
 			</p>
           </div>
         </div>
@@ -163,13 +157,14 @@ Smartphone Compatible web template" />
         <div class="item">
           <div class="about-left-grid">
             <h2><span>Hobbies</span></h2>	
-			<p>- Reading Book</p>
-			<p>- Gym</p>
-			<p>- Reading online articles</p>
-			<p>- Farming</p>
-			<p>- Planting Trees</p>
-			<p>- Hiking</p>
-			<p>- Badminton</p>
+              <p>• Reading Book</p>
+              <p>• Gym</p>
+              <p>• Reading online articles</p>
+              <p>• Farming</p>
+              <p>• Hiking</p>
+              <p>• Badminton</p>
+              <p>• Guitar</p>
+              <p>• Learning new language</p>
           </div>
         </div>
       </div>
@@ -243,6 +238,20 @@ Smartphone Compatible web template" />
                 </div>
               </div>
             </div>
+               <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">AngularJS</span>
+                </div>
+              </div>
+            </div>
+               <div class="col-md-6 right-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">Angular</span>
+                </div>
+              </div>
+            </div>
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
@@ -253,7 +262,7 @@ Smartphone Compatible web template" />
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Javascript</span>
+                  <span class="skill">Javascript & Typescript</span>
                 </div>
               </div>
             </div>
@@ -266,7 +275,7 @@ Smartphone Compatible web template" />
             </div>
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">ReactJs</span>
                 </div>
               </div>
@@ -286,9 +295,18 @@ Smartphone Compatible web template" />
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
             <!-- Skill Bars -->
-            <div class="progress skill-bar ">
-              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">PHP</span>
+              <div class="col-md-6">
+              <div class="progress skill-bar ">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">VB.NET</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="progress skill-bar ">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">PHP</span>
+                </div>
               </div>
             </div>
             <div class="col-md-6">
@@ -301,7 +319,7 @@ Smartphone Compatible web template" />
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Plotly Dash</span>
+                  <span class="skill">Python</span>
                 </div>
               </div>
             </div>
@@ -315,14 +333,22 @@ Smartphone Compatible web template" />
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">C/C++</span>
+                  <span class="skill">C / C++</span>
                 </div>
               </div>
             </div>
-            <div class="clearfix"></div>
-            <div class="progress skill-bar ">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">Android Studio</span>
+            <div class="col-md-6">
+              <div class="progress skill-bar ">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">C#</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="progress skill-bar ">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">Android Studio</span>
+                </div>
               </div>
             </div>
           </div>
@@ -340,6 +366,7 @@ Smartphone Compatible web template" />
           <div class="col-xs-10 wthree_about_right_grid_right">
             <h4>Databases</h4>
             <ul class="news">
+              <li>MsSql</li>
               <li>MySql</li>
               <li>Firebase</li>
             </ul>
@@ -371,8 +398,12 @@ Smartphone Compatible web template" />
           <div class="col-xs-10 wthree_about_right_grid_right">
             <h4>Tools & Ids</h4>
             <ul class="news">
-              <li>NetBeans</li>
+              <li>Microsoft Visual Studio</li>
               <li>VSCode</li>
+              <li>Postman API</li>
+            </ul>
+            <ul class="news">
+              <li>NetBeans</li>
               <li>Sublime Text</li>
               <li>Notepad++</li>
             </ul>
@@ -414,6 +445,35 @@ Smartphone Compatible web template" />
         <h3>MY <span>EXPERIENCE</span></h3>
         <span class="border one"></span>
       </div>
+       <div class="time-main w3l-agile">
+        <div class="col-md-6 year-info">
+          <ul class="year">
+            <li>JAN 2020 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <div class="clearfix"></div>
+          </ul>
+        </div>
+        <ul class="col-md-6 timeline">
+          <li>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title"><a href="https://www.goviewpoint.com/" target="_blank">Viewpoint Research Corporation SDN. BHD, <i>Serdang, Selangor</i></a></h4>
+              </div>
+              <div class="timeline-body">
+				<h5 class="timeline-title">Software Engineer ( Jan 2020 - Present )</h5>
+                <p>• Web and Desktop application development (Full Stack)</p>
+                <p>• Responsible for application software programming (Angular, AngularJS, VB.Net, MSSQL, C#)</p>
+                <p>• Actively participate in Agile Software Development</p>
+                <p>• Enhanced the application's features to effectively fix the bugs and optimize the overall performance, reliability and efficiency</p>
+                <p>• Conduct research for new technology/ methodology.</p>
+                <p>• Work as a part of team to discuss, plan and implement new features and enhancements.</p>
+                <p><strong>Great! place to grow.</strong></p>  
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
       <div class="time-main w3l-agile">
         <div class="col-md-6 year-info">
           <ul class="year">
@@ -429,10 +489,11 @@ Smartphone Compatible web template" />
                 <h4 class="timeline-title"><a href="https://www.itwonders-web.com/" target="_blank">IT Wonders Web Design, <i>Permas Jaya, Johor</i></a></h4>
               </div>
               <div class="timeline-body">
-				<h5 class="timeline-title">Internship ( February 2019 - May 2019 )</h5>
-				<h5 class="timeline-title">Junior Web Developer ( June 2019 - October 2019 )</h5>
-                <p>I worked here as a full-stack web developer.</p>
-				<p>- Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello</p>
+				        <h5 class="timeline-title">Junior Web Developer ( May 2019 - December 2019 )</h5>
+        				<h5 class="timeline-title">Internship ( February 2019 -   April 2019 )</h5>
+                <p>• I worked here as a full-stack web developer.</p>
+                <p>• Planning and implementing tasks given by stakeholder of project following the due date given.</p>
+				        <p>• Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello</p>
                 <p><strong>Great! place to learn.</strong></p>
               </div>
             </div>
@@ -503,8 +564,7 @@ Smartphone Compatible web template" />
         <div class="clearfix"></div>
       </div>
       <div class="copy_right text-center">
-        <p class="float-left">&copy; 2019 Profile of Vhisyhnu Vimilan</p>
-        <p class="float-right">Design on top of <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
+        <p class="float-left">&copy; 2022 Profile of Vhisyhnu Vimilan</p>
         <ul class="hero__social">
           <li>
             <a href="https://my.linkedin.com/in/vhisyhnu-vimilan-763295182" rel="noopener" target="_blank" title='LinkedIn'>
