--- a/index.html
+++ b/index.html
@@ -155,17 +155,18 @@ Smartphone Compatible web template" />
           </div>
         </div>
         <div class="item">
-          <div class="about-left-grid">
-            <h2><span>Hobbies</span></h2>	
-              <p>• Reading Book</p>
-              <p>• Gym</p>
-              <p>• Reading online articles</p>
-              <p>• Farming</p>
-              <p>• Hiking</p>
-              <p>• Badminton</p>
-              <p>• Guitar</p>
-              <p>• Learning new language</p>
-          </div>
+            <div class="about-left-grid">
+                <h2><span>Hobbies</span></h2>
+                <p>• Coding</p>
+                <p>• Reading Book</p>
+                <p>• Gym</p>
+                <p>• Reading online articles</p>
+                <p>• Farming</p>
+                <p>• Hiking</p>
+                <p>• Badminton</p>
+                <p>• Guitar</p>
+                <p>• Learning new language</p>
+            </div>
         </div>
       </div>
     </div>
@@ -223,63 +224,63 @@ Smartphone Compatible web template" />
           </div>
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
-            <!-- Skill Bars -->
-            <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">HTML</span>
-                </div>
+              <!-- Skill Bars -->
+              <div class="col-md-6 left-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">HTML</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-6 right-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">CSS</span>
-                </div>
+              <div class="col-md-6 right-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">CSS</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-               <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">AngularJS</span>
-                </div>
+              <div class="col-md-6 left-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">AngularJS</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-               <div class="col-md-6 right-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Angular</span>
-                </div>
+              <div class="col-md-6 right-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">Angular14</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Python</span>
-                </div>
+              <div class="col-md-6 right-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">Javascript & Typescript</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-6 right-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Javascript & Typescript</span>
-                </div>
+              <div class="col-md-6 left-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">jQuery</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Bootstrap</span>
-                </div>
+              <div class="col-md-6 left-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">Bootstrap</span>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-md-6 right-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">ReactJs</span>
-                </div>
+              <div class="col-md-6 right-div">
+                  <div class="progress skill-bar">
+                      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">ReactJs</span>
+                      </div>
+                  </div>
               </div>
-            </div>
           </div>
           <div class="clearfix"> </div>
         </div>
@@ -297,56 +298,56 @@ Smartphone Compatible web template" />
             <!-- Skill Bars -->
               <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">VB.NET</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">PHP</span>
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">C#.Net</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">Laravel</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">Python</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">Java</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">C / C++</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">C#</span>
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">PHP</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">Android Studio</span>
                 </div>
               </div>
@@ -382,9 +383,11 @@ Smartphone Compatible web template" />
           <div class="col-xs-10 wthree_about_right_grid_right">
             <h4>Project Tools</h4>
             <ul class="news">
-              <li>Git & BitBucket</li>
-              <li>Trello</li>
-              <li>Jira</li>
+                <li>Git & BitBucket</li>
+                <li>Rest API</li>
+                <li>Azure DevOps</li>
+                <li>RxJS</li>
+                <li>Jira</li>
             </ul>
           </div>
           <div class="clearfix"> </div>
@@ -462,7 +465,7 @@ Smartphone Compatible web template" />
               <div class="timeline-body">
 				<h5 class="timeline-title">Software Engineer ( Jan 2020 - Present )</h5>
                 <p>• Web and Desktop application development (Full Stack)</p>
-                <p>• Responsible for application software programming (Angular, AngularJS, VB.Net, MSSQL, C#)</p>
+                <p>• Responsible for application software programming (Angular14, AngularJS, VB.Net, C#.Net, MSSQL)</p>
                 <p>• Actively participate in Agile Software Development</p>
                 <p>• Enhanced the application's features to effectively fix the bugs and optimize the overall performance, reliability and efficiency</p>
                 <p>• Conduct research for new technology/ methodology.</p>
