update experience and resume

--- a/index.html
+++ b/index.html
@@ -296,17 +296,24 @@ Smartphone Compatible web template" />
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
             <!-- Skill Bars -->
-              <div class="col-md-6">
+            <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">VB.NET</span>
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">ASP.Net (.Net Core & .Net Framework)</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">C#.Net</span>
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">C#</span>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-6">
+              <div class="progress skill-bar ">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">VB.NET</span>
                 </div>
               </div>
             </div>
@@ -328,13 +335,6 @@ Smartphone Compatible web template" />
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
                   <span class="skill">Java</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">C / C++</span>
                 </div>
               </div>
             </div>
@@ -406,9 +406,9 @@ Smartphone Compatible web template" />
               <li>Postman API</li>
             </ul>
             <ul class="news">
-              <li>NetBeans</li>
+              <li>Dapper</li>
               <li>Sublime Text</li>
-              <li>Notepad++</li>
+              <li>NetBeans++</li>
             </ul>
             <ul class="news">
               <li>Atom</li>
@@ -465,7 +465,7 @@ Smartphone Compatible web template" />
               <div class="timeline-body">
 				<h5 class="timeline-title">Software Engineer ( Jan 2020 - Present )</h5>
                 <p>• Web and Desktop application development (Full Stack)</p>
-                <p>• Responsible for application software programming (Angular14, AngularJS, VB.Net, C#.Net, MSSQL)</p>
+                <p>• Responsible for application software programming (ASP.Net (.Net Core & .Net Framework), C#, VB.Net, Angular14, AngularJS, MSSQL)</p>
                 <p>• Actively participate in Agile Software Development</p>
                 <p>• Enhanced the application's features to effectively fix the bugs and optimize the overall performance, reliability and efficiency</p>
                 <p>• Conduct research for new technology/ methodology.</p>
