--- a/index.html
+++ b/index.html
@@ -241,15 +241,15 @@ Smartphone Compatible web template" />
               </div>
               <div class="col-md-6 left-div">
                   <div class="progress skill-bar">
-                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                          <span class="skill">AngularJS</span>
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">Angular16</span>
                       </div>
                   </div>
               </div>
               <div class="col-md-6 right-div">
                   <div class="progress skill-bar">
-                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                          <span class="skill">Angular14</span>
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                          <span class="skill">AngularJS</span>
                       </div>
                   </div>
               </div>
@@ -312,8 +312,8 @@ Smartphone Compatible web template" />
             </div>
               <div class="col-md-6">
               <div class="progress skill-bar ">
-                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">VB.NET</span>
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">NestJS</span>
                 </div>
               </div>
             </div>
@@ -368,6 +368,7 @@ Smartphone Compatible web template" />
             <h4>Databases</h4>
             <ul class="news">
               <li>MsSql</li>
+              <li>PostgreSQL</li>
               <li>MySql</li>
               <li>Firebase</li>
             </ul>
@@ -387,7 +388,7 @@ Smartphone Compatible web template" />
                 <li>Rest API</li>
                 <li>Azure DevOps</li>
                 <li>RxJS</li>
-                <li>Jira</li>
+                <li>SD</li>
             </ul>
           </div>
           <div class="clearfix"> </div>
@@ -399,7 +400,7 @@ Smartphone Compatible web template" />
             </div>
           </div>-->
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>Tools & Ids</h4>
+            <h4>Tools & Ides</h4>
             <ul class="news">
               <li>Microsoft Visual Studio</li>
               <li>VSCode</li>
@@ -448,7 +449,7 @@ Smartphone Compatible web template" />
         <h3>MY <span>EXPERIENCE</span></h3>
         <span class="border one"></span>
       </div>
-       <div class="time-main w3l-agile">
+      <div class="time-main w3l-agile">
         <div class="col-md-6 year-info">
           <ul class="year">
             <li>JAN 2020 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
@@ -460,10 +461,32 @@ Smartphone Compatible web template" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
+                <h4 class="timeline-title"><a href="https://www.illumina.com/" target="_blank">Illumina PTE. LTD, <i>Singapore</i></a></h4>
+              </div>
+              <div class="timeline-body">
+				<h5 class="timeline-title">Software Engineer ( May 2023 - Present )</h5>
+                <p>• Full stack web development using Angular, NestJS, PostgreSQL, .Net Core, MSSQL</p>
+                <p>• Worked with cross-functional teams to design and implement new features, resulting in a 30% increase in user engagement.</p>
+                <p>• Developed a dashboard to enhance inventory control and management which offer valuable insights into inventory resources.</p>
+                <p>• Reduced page load times by optimizing backend APIs and services.</p>
+                <p>• Wrote extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality.</p>
+                <p>• Vast knowledge and experience in Agile software development principles and practices</p>
+                <p>• Worked on projects that involved integrating third-party libraries and RESTful APIs.</p>
+                <p>• Architecture and Planning</p>
+                <p><strong>Great! place to grow.</strong></p>  
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="col-md-6 timeline">
+          <li>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
                 <h4 class="timeline-title"><a href="https://www.goviewpoint.com/" target="_blank">Viewpoint Research Corporation SDN. BHD, <i>Serdang, Selangor</i></a></h4>
               </div>
               <div class="timeline-body">
-				<h5 class="timeline-title">Software Engineer ( Jan 2020 - Present )</h5>
+				<h5 class="timeline-title">Software Engineer ( Jan 2020 - May 2023 )</h5>
                 <p>• Web and Desktop application development (Full Stack)</p>
                 <p>• Responsible for application software programming (ASP.Net (.Net Core & .Net Framework), C#, VB.Net, Angular14, AngularJS, MSSQL)</p>
                 <p>• Actively participate in Agile Software Development</p>
