update contact details

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template" />
               <li>
                 <ul class="address-text">
                   <li><b>MOBILE </b></li>
-                  <li>+60 1127605409</li>
+                  <li>+65 80162549 / +60 1127605409</li>
                 </ul>
               </li>
               <li>
@@ -581,7 +581,7 @@ Smartphone Compatible web template" />
               <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
               <h4>Contact By Mobile</h4>
               <ul>
-                <li>Mobile: +60 1127605409</li>
+                <li>Mobile: +65 80162549 / +60 1127605409</li>
               </ul>
             </div>
           </div>
