update company name

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ Smartphone Compatible web template" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a href="https://www.illumina.com/" target="_blank">Illumina PTE. LTD, <i>Singapore</i></a></h4>
+                <h4 class="timeline-title"><a href="https://www.illumina.com/" target="_blank">Illumina, <i>Singapore</i></a></h4>
               </div>
               <div class="timeline-body">
 				<h5 class="timeline-title">Software Engineer ( May 2023 - Present )</h5>
