update working experience

--- a/index.html
+++ b/index.html
@@ -290,14 +290,16 @@
                 </div>
                 <div class="timeline-body">
           <h5 class="timeline-title">Software Engineer ( May 2023 - Present )</h5>
-                  <p>• Full stack web development using Angular, NestJS, PostgreSQL, .Net Core, MSSQL</p>
-                  <p>• Worked with cross-functional teams to design and implement new features, resulting in a 30% increase in user engagement.</p>
-                  <p>• Developed a dashboard to enhance inventory control and management which offer valuable insights into inventory resources.</p>
-                  <p>• Reduced page load times by optimizing backend APIs and services.</p>
-                  <p>• Wrote extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality.</p>
-                  <p>• Vast knowledge and experience in Agile software development principles and practices</p>
-                  <p>• Worked on projects that involved integrating third-party libraries and RESTful APIs.</p>
-                  <p>• Architecture and Planning</p>
+                  <p>• Full stack web development using Angular, NestJS, .Net Core backed by PostgreSQL and MSSQL database on an AWS K8s platform.</p>
+                  <p>• Work with cross-functional teams to design and implement new features, resulting in a 30% increase in user engagement.</p>
+                  <p>• Developed and maintain a dashboard to enhance inventory control and management which offer valuable insights into inventory resources.</p>
+                  <p>• Reduce page load times by optimizing backend APIs and services.</p>
+                  <p>• Refactored code and eliminated bugs, leading to a 15% improvement in the application's performance.</p>
+                  <p>• Worked with a team of developers from USA to improve development process and test suite on a high-profile initiative.</p>
+                  <p>• Write extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality, and performance.</p>
+                  <p>• Worked with other departments to address improvements, internal tools, and implementation issues.</p>
+                  <p>• Built various front end performance enhancement such as lazy loading of images and assets, removal of extra routing and Optimize CSS and JavaScript into the project that significantly reduce the loading time.</p>
+                  <p>• Work on project to help streamline application’s localization process.</p>
                   <p><strong>Great! place to grow.</strong></p>  
                 </div>
               </div>
@@ -314,12 +316,14 @@
                 </div>
                 <div class="timeline-body">
           <h5 class="timeline-title">Software Engineer ( Jan 2020 - May 2023 )</h5>
-                  <p>• Web and Desktop application development (Full Stack)</p>
-                  <p>• Responsible for application software programming (ASP.Net (.Net Core & .Net Framework), C#, VB.Net, Angular14, AngularJS, MSSQL)</p>
-                  <p>• Actively participate in Agile Software Development</p>
-                  <p>• Enhanced the application's features to effectively fix the bugs and optimize the overall performance, reliability and efficiency</p>
-                  <p>• Conduct research for new technology/ methodology.</p>
-                  <p>• Work as a part of team to discuss, plan and implement new features and enhancements.</p>
+                  <p>• Rewrote existing Web Application in Angular and ASP.Net Web API 2.</p>
+                  <p>• Proposed and implemented foundation for unit testing (xUnit) for existing Web Application.</p>
+                  <p>• Enhanced the application's features to effectively fix the bugs and optimize the overall performance, reliability and efficiency.</p>
+                  <p>• Enhanced code maintainability by implementing efficient GitHub branching strategies, allowing developers to work simultaneously without conflict.</p>
+                  <p>• Effectively utilized Postman, SOAP and Rest APIs in project, promoting seamless data exchange and system integration.</p>
+                  <p>• Optimized front-end performance by 20% by refining JS and Angular codebases, following best practice standards and using SonarQube.</p>
+                  <p>• Projects worked on include: Angular14, AngularJS, ASP.Net (.Net Core & .Net Framework), C#, MSSQL.</p>
+                  <p>• Actively participate in Agile Software Development.</p>
                   <p><strong>Great! place to grow.</strong></p>  
                 </div>
               </div>
@@ -338,9 +342,12 @@
                 <div class="timeline-body">
                   <h5 class="timeline-title">Junior Web Developer ( May 2019 - December 2019 )</h5>
                   <h5 class="timeline-title">Internship ( February 2019 -   April 2019 )</h5>
-                  <p>• I worked here as a full-stack web developer.</p>
+                  <p>• Developed and maintained an ecommerce website written in Laravel and backed by MySQL database.</p>
+                  <p>• Helped update the HTML/CSS to provide a more contemporary look and feel for an ecommerce website.</p>
+                  <p>• Projects worked on include: Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello.</p>
                   <p>• Planning and implementing tasks given by stakeholder of project following the due date given.</p>
-                  <p>• Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello</p>
+                  <p>• Communicated with clients to implement Web Services.</p>
+                  <p>• Worked closely with product team on scope of future projects and innovations.</p>
                   <p><strong>Great! place to learn.</strong></p>
                 </div>
               </div>
