Update working experience

--- a/index.html
+++ b/index.html
@@ -291,15 +291,15 @@
                 <div class="timeline-body">
           <h5 class="timeline-title">Software Engineer ( May 2023 - Present )</h5>
                   <p>• Full stack web development using Angular, NestJS, .Net Core backed by PostgreSQL and MSSQL database on an AWS K8s platform.</p>
-                  <p>• Work with cross-functional teams to design and implement new features, resulting in a 30% increase in user engagement.</p>
+                  <p>• Worked with cross-functional teams to design and implement new features, resulting in a 30% increase in user engagement.</p>
                   <p>• Developed and maintain a dashboard to enhance inventory control and management which offer valuable insights into inventory resources.</p>
-                  <p>• Reduce page load times by optimizing backend APIs and services.</p>
+                  <p>• Reduced page load times by optimizing backend APIs and services.</p>
                   <p>• Refactored code and eliminated bugs, leading to a 15% improvement in the application's performance.</p>
                   <p>• Worked with a team of developers from USA to improve development process and test suite on a high-profile initiative.</p>
                   <p>• Write extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality, and performance.</p>
                   <p>• Worked with other departments to address improvements, internal tools, and implementation issues.</p>
                   <p>• Built various front end performance enhancement such as lazy loading of images and assets, removal of extra routing and Optimize CSS and JavaScript into the project that significantly reduce the loading time.</p>
-                  <p>• Work on project to help streamline application’s localization process.</p>
+                  <p>• Worked on project to help streamline application’s localization process.</p>
                   <p><strong>Great! place to grow.</strong></p>  
                 </div>
               </div>
@@ -323,7 +323,7 @@
                   <p>• Effectively utilized Postman, SOAP and Rest APIs in project, promoting seamless data exchange and system integration.</p>
                   <p>• Optimized front-end performance by 20% by refining JS and Angular codebases, following best practice standards and using SonarQube.</p>
                   <p>• Projects worked on include: Angular14, AngularJS, ASP.Net (.Net Core & .Net Framework), C#, MSSQL.</p>
-                  <p>• Actively participate in Agile Software Development.</p>
+                  <p>• Actively participated in Agile Software Development.</p>
                   <p><strong>Great! place to grow.</strong></p>  
                 </div>
               </div>
@@ -345,7 +345,7 @@
                   <p>• Developed and maintained an ecommerce website written in Laravel and backed by MySQL database.</p>
                   <p>• Helped update the HTML/CSS to provide a more contemporary look and feel for an ecommerce website.</p>
                   <p>• Projects worked on include: Laravel, Plotly Dash, HTML, CSS, javascript, Firebase, Mysql, Linux(Ubuntu), Pandas, Laradock, JIRA, Trello.</p>
-                  <p>• Planning and implementing tasks given by stakeholder of project following the due date given.</p>
+                  <p>• Planned and implemented tasks given by stakeholder of project following the due date given.</p>
                   <p>• Communicated with clients to implement Web Services.</p>
                   <p>• Worked closely with product team on scope of future projects and innovations.</p>
                   <p><strong>Great! place to learn.</strong></p>
