Add recommendation from linkedIn

--- a/index.html
+++ b/index.html
@@ -394,6 +394,27 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
+                        <span>Highly recommened Vhisyhnu as an asset to any software engineering or web development team. In just over 12 months as a 2nd-level manager to Vhisyhnu I could confidently assign him to complex tasks & projects with the knowledge that even if he didn't know how to do something, he could pick up new skills and new technologies quickly & confidently. And while his work is high quality, what really sets him apart is the positive attitude and desire to learn -- attributes he brings to work with him every single day.</span>
+                        <i class="bi bi-quote quote-icon-right"></i>
+                      </p>
+                      <h3>Rick Britton</h3>
+                      <h4>Associate Director of Analytics @ Illumina</h4>
+                      <div class="stars">
+                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End recommendation item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="row gy-6 justify-content-center">
+                  <div class="col-lg-10">
+                    <div class="testimonial-content">
+                      <p>
+                        <i class="bi bi-quote quote-icon-left"></i>
                         <span>Vhisyhnu made a significant transition from the Global Operations department to my team, and I had the pleasure of working with him on a high-profile initiative. Despite the change in team reporting structure, his ability to adapt and become a solid individual contributor quickly is commendable.
 
                           Vhisyhnu's proficiency in web application development is truly impressive. He quickly mastered our complex technology stack, including Nest.js, Angular, TypeScript, Javascript, and Postgres on an AWS K8S platform, demonstrating his ability to create standout software solutions for our organization. Also, despite the time difference between him being in Singapore and the core team in the US, Vhisynu's solid communication skills allowed our exchanges, however short they may be, to always be highly enriching. 
