--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h6>Software Engineer</h6>
             <div class="address">
               <h5 class="address-text">
-                Dedicated Software Engineer with over 5 years' experience leading both front-end and back-end development, and performing quality assurance. I love working with people to do things bigger than I could accomplish alone. A quick learner in a working environment while able to meet targets and deadlines with good precision. I yearn to always learn more to become a better programmer and version of myself.
+                I am a dedicated Software Engineer with over 5 years of experience in web and back-end development, specializing in technologies such as Angular, .Net Core, NestJS, and React. I have successfully contributed to a range of projects in both startup and corporate settings, thriving on collaboration and the power of teamwork to achieve greater goals. A quick learner, I adapt to new challenges and consistently meet targets with precision, while my commitment to high-quality solutions drives me to optimize performance and enhance code quality through best practices like unit testing and effective version control. I excel in Agile environments, working closely with cross-functional teams to ensure project goals align with stakeholder expectations.
               </h5>
             </div>
           </div>
@@ -296,7 +296,7 @@
                   <p>• Reduced page load times by optimizing backend APIs and services.</p>
                   <p>• Refactored code and eliminated bugs, leading to a 15% improvement in the application's performance.</p>
                   <p>• Worked with a team of developers from USA to improve development process and test suite on a high-profile initiative.</p>
-                  <p>• Write extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality, and performance.</p>
+                  <p>• Wrote extensive unit tests and integrated Docker with development pipeline, resulting in reduction in bug-related delays and a increase in overall code quality, and performance.</p>
                   <p>• Worked with other departments to address improvements, internal tools, and implementation issues.</p>
                   <p>• Built various front end performance enhancement such as lazy loading of images and assets, removal of extra routing and Optimize CSS and JavaScript into the project that significantly reduce the loading time.</p>
                   <p>• Worked on project to help streamline application’s localization process.</p>
